Clean up of CEnity.java